# MANA

./: .gitignore  .readthedocs.yaml  BRANCH AIM.md  README.md  analysis.ipynb  dars_calculation.ipynb  master_notebook.ipynb  partial_enumeration.ipynb  props.properties  pyproject.toml
docs/: conf.py  index.rst  manamodeller.rst
docs/_build/doctrees/: environment.pickle  index.doctree  manamodeller.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  manamodeller.html  objects.inv  py-modindex.html  search.html  searchindex.js
mana/: batchs.py  dars.py  modelling.py  results_analysis.py  results_processing.py  utils.py
tests/DARS_direction/: amiodarone_24_hr_HighvsControlnoise_filtered.tsv
tests/analysis/clusters_annotation_tables/: amiodarone_24_hr_extracellexclude_cluster1_table.xlsx  amiodarone_24_hr_extracellexclude_cluster2_table.xlsx
tests/analysis/dist_matrices/: amiodarone_24_hr_extracellexclude.tsv
tests/analysis/reaction_clusters/: amiodarone_24_hr_extracellexclude_cluster1.tsv  amiodarone_24_hr_extracellexclude_cluster2.tsv
tests/analysis/subnetwork_gmls/: amiodarone_24_hr_extracellexclude_cluster1_undirected_r2_noisecond_extracell.gml  amiodarone_24_hr_extracellexclude_cluster2_undirected_r2_noisecond_extracell.gml
tests/analysis/subnetwork_reactions/: amiodarone_24_hr_extracellexclude_cluster1_undirected_r2_noisecond_extracell.txt  (+1 more)
tests/input_data/: blocked_inactives_phh_exchange_exportextracell_reactions.txt  pheno_annotated.tsv  recon2_2_reactions.csv  recon2v2_biomass_corrected.json  test_dataset.tsv
(+10 files in other folders)
