[tool.poetry]
name = "mana"
version = "0.1.0"
description = ""
authors = ["Louison Fresnais <fresnaislouison@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
dexom-python = "^1.0"
cobra = "0.26.3"
pandas = ">=1.3.0"
numpy = ">=1.10"
tqdm = "^4.65.0"
progressbar = "^2.5"
networkx = ">=2.8.4"
pyvis = ">=0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
